2001-08-04  Damon Chaplin  <damon@ximian.com>

	* Released 0.7

2001-08-04  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in (OutputFunction): 
	* gtkdoc-mktmpl.in (OutputDeclaration): patch from Lowell Johnson
	<ldjohn@usgs.gov> to accept things like "long long", "short int",
	"char test[][CLEN]" as function parameters.

2001-07-20  Anders Carlsson  <andersca@gnome.org>

	* gtkdoc-scangobj.in: Remove argument to g_type_init ();

2001-07-09  Damon Chaplin  <damon@ximian.com>

	* gtkdoc-mkdb.in (ParseStructDeclaration): accept G_CONST_RETURN
	modifier for function return values. gtkdoc-mktmpl.in already had this.

Thu Jun 21 11:57:16 2001  Owen Taylor  <otaylor@redhat.com>

	* gtkdoc-scangobj.in: Conform to changes in GObject API
	for property retrieval.

2001-05-25  Peter Williams  <peterw@ximian.com>

	* gtkdoc-mkdb.in (ScanSourceFile): Skip single-line comments -- 
	prevents barfing on ORBit-generated files.

2001-05-20  Damon Chaplin  <damon@ximian.com>

	* examples/Makefile.am (sgml-build.stamp): replaced use of wildcard
	(which isn't portable) with original *.sgml. I think this just means
	that the first time you try to build the docs it will fail, but if
	you run make again it will work.

	* doc/setting-up.txt: explained that make may fail the first time.

2001-05-19  Damon Chaplin  <damon@ximian.com>

	* README: 
	* doc/README:
	* doc/setting-up.txt:
	* doc/sections-file.txt:
	* doc/authors.txt: updated docs to cover simpler setup procedure.

	* doc/gtk_button.txt:
	* doc/manpage:
	* doc/manpage.man:
	* doc/notes.txt: removed out-of date stuff.

	* Makefile.am (dist-hook): updated so it doesn't try to remove old
	examples subdirectory stuff.

2001-05-19  Damon Chaplin  <damon@ximian.com>

	* examples/gnome/*:
	* examples/gnomeui/*: removed out-of-date example files.

	* examples/configure.in:
	* examples/Makefile.am: new example setup mostly copied from GTK+.

	* examples/README: describe the example configure.in/Makefile.am.
