@@ -1,3 +1,7 @@
+2001-08-12  Jens Finke <jens@gnome.org>
+	
+	* Updated gtk-doc.spec.in file to match gpp standard.
+
 2001-08-04  Damon Chaplin  <damon@ximian.com>
 
 	* Released 0.7
